[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/jump_item.png" type="Texture" id=1]
[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Shaders/outline_shader.tres" type="Material" id=3]
[ext_resource path="res://Scenes/UI/GemCost.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/ItemShopWidget.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0, 0.0627451, 1 )
skew = Vector2( 0.3, 0 )
border_width_left = 32
border_width_top = 8
border_width_right = 32
border_width_bottom = 8
border_color = Color( 0.0235294, 0, 0.0627451, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ItemShopWidget" type="HBoxContainer"]
margin_left = 175.0
margin_top = 116.0
margin_right = 688.0
margin_bottom = 196.0
theme = ExtResource( 2 )
custom_constants/separation = 20
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
ability = 3

[node name="ItemIcon" type="TextureRect" parent="."]
material = ExtResource( 3 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="BlackBar" type="PanelContainer" parent="."]
margin_left = 100.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": "	"
}

[node name="Dots" type="HBoxContainer" parent="BlackBar"]
margin_left = 32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 72.0
custom_constants/separation = 32

[node name="Buy" type="Button" parent="."]
margin_left = 184.0
margin_top = 3.0
margin_right = 384.0
margin_bottom = 77.0
rect_min_size = Vector2( 200, 74 )
size_flags_vertical = 4
text = "Add "

[node name="GemCost" parent="." instance=ExtResource( 4 )]
margin_left = 404.0
margin_right = 513.0
margin_bottom = 80.0

[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
